corrected style isuues, and wrapped texts into translation fnction

--- a/os-ui/src/component/SignUpSignIn/SignIn/ForgotPassword/forgotPassword.scss
+++ b/os-ui/src/component/SignUpSignIn/SignIn/ForgotPassword/forgotPassword.scss
@@ -54,3 +54,10 @@
     cursor: not-allowed;
   }
 }
+
+.forgotpsdContainer {
+  margin-top: 1px;
+  &_mainBody {
+    margin: 20px 80px 0 80px;
+  }
+}
